# cub

./: .coverage  .cub.json  .dockerignore  .gitignore  @progress.txt  AGENT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  QUICK_START.md  README.md  RELEASE-NOTES-1.0.md  ROADMAP.md  TROUBLESHOOTING.md  UPGRADING.md  architecture_review.md  claude  coverage.json  cub  cub-init  curb  curb-init  install.sh  plan_review.md  progress.txt  pyproject.toml  test_circular.json  test_output.txt  test_valid.json  uninstall.sh
.beads/: branches.yaml  issues.jsonl
.beads/export-state/: 1e122c54fe76f139.json  7e7081d5443c1bc3.json
.chopshop/spikes/: gemini.md
.claude/: settings.json
.claude/commands/: cub.md  cub:architect.md  cub:doctor.md  cub:itemize.md  cub:ledger.md  cub:orient.md  cub:spec-to-issues.md  cub:spec.md  cub:status.md  cub:suggest.md  cub:tasks.md  cub:triage.md  plan.md  triage.md
.cub/: .sync-state.json  EPIC_TASK_ASSOCIATION.md  README.md  STABILITY.md  agent.md  beads-import-bug-report.md  branches.yaml  config.json  counters.json  dashboard.db  fix_plan.md  guardrails.md  learned-routes.md  map.md  progress.md  progress.txt  prompt.md  route-log.jsonl  tasks.jsonl  template-hashes.json
.cub/docs/: claude-code-hooks.md  run-exit-paths.md
.cub/hooks/: README.md  post-tool-use.sh  session-end.sh  session-start.sh  stop.sh
.cub/ledger/: index.jsonl
.cub/run-sessions/: active-run.json  cub-20260124-212646.json  cub-20260124-212647.json  cub-20260124-212652.json  cub-20260124-212653.json  cub-20260124-213241.json  cub-20260124-215556.json  cub-20260124-220852.json  cub-20260124-222651.json  cub-20260124-223410.json  cub-20260125-041814.json  cub-20260125-042750.json  cub-20260125-042751.json  cub-20260125-045434.json  cub-20260125-053321.json  cub-20260125-055702.json  cub-20260125-061133.json  cub-20260125-061134.json  cub-20260125-114420.json  cub-20260125-115257.json  cub-20260126-173731.json  cub-20260126-174529.json  cub-20260126-174530.json  cub-20260126-175824.json  cub-20260126-180033.json  cub-20260126-180644.json  cub-20260126-182235.json  cub-20260126-182236.json  cub-20260126-183019.json  cub-20260126-184322.json  cub-20260126-184323.json  cub-20260126-190433.json  cub-20260126-190434.json  cub-20260126-191806.json  cub-20260126-192128.json  cub-20260126-193012.json  cub-20260126-195327.json  cub-20260126-195328.json  cub-20260126-195441.json  cub-20260126-201949.json  (+230 more)
.cub/scripts/: statusline.py
.cub/tools/: registry.json
.cub/toolsmith/: adopted.json  catalog.json
.cub/views/: README.md
.github/workflows/: docs.yml  test.yml
docker/: Dockerfile  docker-compose.yml
docs/: .gitignore  ALPHA-NOTES.md  CNAME  CONFIG.md  HARNESSES.md  HOOKS.md  QUICK_START.md  adventure.html  adventure2.html  adventure3.html  index.html  install.sh  mkdocs.yml  requirements.txt  toolsmith.md
docs-site/: mkdocs.yml
docs-site/docs/: index.md
docs-src/: mkdocs.yml
docs-src/content/: glossary.md  index.md  llms-full.txt  llms.txt
docs/content/: changelog.md  index.md
docs/includes/: abbreviations.md
lib/: artifacts.sh  beads.sh  branches.sh  budget.sh  checkpoints.sh  cmd_agent.sh  cmd_artifacts.sh  cmd_doctor.sh  cmd_explain.sh  cmd_guardrails.sh  cmd_import.sh  cmd_init.sh  cmd_interview.sh  cmd_pipeline.sh  cmd_pr.sh  cmd_prep.sh  cmd_run.sh  cmd_status.sh  cmd_update.sh  config.sh  dependencies.sh  failure.sh  git.sh  guardrails.sh  harness.sh  hooks.sh  llm.sh  logger.sh  priority.sh  project.sh  session.sh  state.sh  tasks.sh
lib/parsers/: github.sh  json.sh  markdown.sh
plans/: 1.0-EXPECTATIONS.md  1.0-ROADMAP.md  1.0-TASKS.md
plans/0.30-foundation-phase/: itemized-plan.md  plan.json
plans/_punchlists/: 2026-01-22-01.md  2026-01-23-dashboard-bugs-01.md  2026-01-28-assorted-bugs-plan.md  2026-01-28-assorted-bugs.md  2026-02-03-plan.md  2026-02-03.md  v0.27.0-bugs-1.md  v0.27.0-bugs.md
plans/agent-output-and-nl-routing/: architecture.md  itemized-plan.md  plan.json
plans/bare-cub-command/: architecture.md  itemized-plan.md  orientation.md  plan.json
plans/context-restructure/: architecture.md  orientation.md  plan.json
plans/cub-019A-plan-phase-redesign/: architecture.md  itemized-plan.md  plan.json
plans/cub-026A-0.30-foundation-phase/: architecture.md  itemized-plan.md  orientation.md  plan.json
plans/cub-028A-bare-cub-command/: itemized-plan.md  plan.json
plans/cub-task-parity/: plan.json  (+2 more)
scripts/: build-plan.sh  check_coverage_tiers.py  compare-backends.py  cut-release.sh  generate_changelog.py  install.sh  land-branch.sh  migrate-to-hierarchical-ids.py  move_specs_released.py  new-branch.sh  release-pipeline.sh  rename-to-cub.sh  spec-interview.sh  spec-to-issues.sh  statusline.py  test_install_from_source.sh  update_webpage_changelog.py
sketches/: 0.30-epics.md  0.30-feature-notes.md  ai-product-dev-lifecycle-painpoints.md  cub-cli-default-command.md  cub-command-map.md  eval-and-regression-pm-deep-dive.md  harness-usage-map.md  pain-points-map.md  pm-painpoints-research-links.md  post-alpha-vision-analysis.md  public-alpha-0.30-plan.md  public-alpha-notes.md  shell-installer-best-practices.md
specs/: SPEC-STATUS.md  SPEC-TEMPLATE.md  TOOLS-PRIORITY.md  TOOLS-WISHLIST.md  investigate-command.md  session-spec.md
templates/: .cub.json  AGENT.md  PROMPT.md  README.md  agent.md  constitution.md  fix_plan.md  guardrails.md  progress.txt
tests/: README.md  acceptance_criteria.bats  artifacts.bats  branches.bats  budget.bats  cli.bats  config.bats  conftest.py  cub.bats  curb.bats  dependencies.bats  doctor.bats  e2e.bats  error_handling.bats  failure.bats  git.bats  guardrails.bats  harness.bats  hooks.bats  integration.bats  interview.bats  json_parser.bats  logger.bats  markdown_parser.bats  migrate_layout.bats  pipeline.bats  prep.bats  session.bats  state.bats  tasks.bats  test_agent_format.py  test_api_artifact.py  test_api_board.py  test_api_entity.py  test_api_errors.py  test_api_stats.py  test_api_views.py  test_architecture.py  test_bash_delegate.py  test_both_backend.py  (+174 more)
web/: index.html  install.sh
(+2044 files in other folders)
