[project]
name = "cub"
version = "0.29.2"
description = "AI Coding Assistant Loop - autonomous task execution with Claude, Codex, and more"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Cub Contributors" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = [
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "GitPython>=3.1.0",
    "requests>=2.31.0",
    "python-frontmatter>=1.0.0",
    "python-dotenv>=1.0.0",
    "anyio>=4.0.0",
    "claude-agent-sdk>=0.1.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.27.0",
    "grep-ast>=0.9.0",
    "networkx>=3.2.0",
    "tree-sitter-language-pack>=0.13.0",
    "diskcache>=5.6.0",
    "pathspec>=0.12.0",
    "tomli>=2.0.0;python_version<'3.11'",
]


[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.2.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests>=2.31.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.2.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests>=2.31.0",
]

[project.scripts]
cub = "cub.cli:cli_main"
cub-hooks = "cub.core.harness.hooks:cli_main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cub = ["bash/**/*", "templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --strict-markers"
markers = [
    "asyncio: mark test as an async test",
    "timeout: mark test with a timeout",
    "slow: marks tests that take >10s (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
disable_error_code = ["prop-decorator"]

[[tool.mypy.overrides]]
module = ["claude_agent_sdk", "claude_agent_sdk.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["frontmatter"]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["grep_ast", "grep_ast.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tree_sitter_language_pack", "tree_sitter_language_pack.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tree_sitter", "tree_sitter.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["networkx", "networkx.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["diskcache", "diskcache.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pathspec", "pathspec.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pygments", "pygments.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.coverage.run]
source = ["src/cub"]
branch = true
omit = [
    "src/cub/__main__.py",
    "src/cub/bash/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
# Minimum overall coverage (individual tiers have higher thresholds)
# See .cub/STABILITY.md for per-module tier definitions
fail_under = 50

[tool.coverage.html]
directory = "htmlcov"

# Per-file coverage thresholds by stability tier
# Enforcement: pytest --cov=src/cub --cov-report=json && python scripts/check_coverage_tiers.py --strict
#
# Thresholds defined in scripts/check_coverage_tiers.py match STABILITY.md:
#   Solid (80%+): core/config/*, core/tasks/backend.py, core/harness/backend.py, etc.
#   Moderate (60%+): cli/run.py, core/tasks/beads.py, core/harness/claude.py, etc.
#   Experimental (40%+): audit/*, core/sandbox/provider.py, etc.
#   UI/Delegated (no threshold): cli/status.py, cli/monitor.py, etc. (BATS-tested)
